--- a/hazards.html
+++ b/hazards.html
@@ -27,20 +27,18 @@
                 <h2>Key Health Hazards</h2>
                 <div class="textbox">
                     <p>
-                        Polonium-210 is highly radioactive and poses severe health risks, even in extremely small
-                        quantities. Exposure can lead to acute radiation syndrome, characterized by nausea, vomiting,
+                        Polonium-210 is highly radioactive and poses severe health risks, even in small
+                        quantities. Exposure can lead to acute radiation syndrome, which leads to nausea, vomiting,
                         and severe fatigue. If untreated, exposure can result in multi-organ failure and death.
                     </p>
                     <p>
-                        Long-term exposure to low doses of Polonium-210 increases the risk of cancer due to its ability
-                        to damage DNA through alpha particle emissions. Smokers are particularly vulnerable, as trace
-                        amounts of Polonium-210 are found in tobacco, directly impacting lung tissue.
+                        Long-term exposure to low doses of Polonium-210 increases the risk of cancer. Smokers are particularly vulnerable, as low
+                        amounts of Polonium-210 are found in tobacco, impacting lung tissue.
                     </p>
                     <p>
-                        The risk of radiation poisoning is compounded by Polonium-210's ability to accumulate in
-                        critical organs such as the liver, spleen, and kidneys, causing irreversible damage. Proper
-                        protective measures are essential for those working in industries where Polonium-210 may be
-                        present.
+                        The risk of radiation poisoning is highlighted by Polonium-210's ability to accumulate in
+                        organs like the liver, spleen, and kidneys, causing irreversible damage. Proper
+                        protective measures are key for those working in geo-industries where Polonium-210 is present.
                     </p>
                 </div>
                 <a href="index.html" class="back-button">Back to Home</a>
