--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
                 <h2>Introduction to Polonium-210</h2>
                 <div class="textbox">
                     <p>
-                        Polonium-210 (Po-210) is a highly radioactive element, naturally occurring through the decay of
+                        Polonium-210 (Po-210) is a highly radioactive element, occurs through decay of
                         radon gas and uranium.
-                        Despite its rarity, it poses significant risks due to its extreme toxicity, even in microscopic
+                        It poses significant risks due to its extreme toxicity, even in microscopic
                         amounts.
                     </p>
                     <p>
                         This element gained infamy for its use in high-profile poisonings but is also found in trace
-                        amounts in tobacco and
-                        industrial activities, making it a critical concern for public health.
+                        amounts in tobacco and industrial sectors, making it a critical concern for public health.
                     </p>
                 </div>
             </div>
