--- a/solutions.html
+++ b/solutions.html
@@ -28,17 +28,17 @@
                 <h2>Practical Solutions</h2>
                 <div class="textbox">
                     <p>
-                        <strong>Strengthened Workplace Safety:</strong> Industries handling radioactive materials must
-                        implement robust safety protocols, including advanced radiation monitoring systems, protective
+                        <strong>Strengthened Workplace Safety:</strong> Industries must
+                        implement strong safety protocols, including radiation monitoring systems, protective
                         gear, and employee training.
                     </p>
                     <p>
                         <strong>Public Awareness Campaigns:</strong> Educating the public about the risks associated
-                        with Polonium-210 can help reduce accidental exposures. Outreach programs can empower
+                        with Polonium-210 can help reduce accidental exposures. Outreach programs can entrust
                         individuals to make informed decisions and advocate for safety measures.
                     </p>
                     <p>
-                        <strong>Global Collaboration:</strong> International agreements and monitoring systems must be
+                        <strong>Global Collaboration:</strong> International agreements and monitoring must be
                         strengthened to track and control the movement of radioactive substances, preventing misuse and
                         ensuring public safety worldwide.
                     </p>
